// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Search Search Form 1`] = `
<div
  class="rpl-search-form"
>
  <h1>
    Search results
  </h1>
   
  <!---->
    
  <div
    class="rpl-search-form__field"
  >
    <label>
      <span
        class="rpl-search-form__label-text"
      >
        Search for
      </span>
       
      <input
        class="rpl-search-form__input"
        placeholder="Enter keywords"
        type="text"
      />
    </label>
     
    <button
      class="rpl-search-form__btn"
    >
      <span
        class="rpl-visually-hidden"
      >
        Search
      </span>
       
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--search rpl-icon--color_primary"
        overflow="visible"
        style="width: 24px; height: 24px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.9895 9.24258C12.587 6.79233 12.2144 3.42261 9.85748 1.40991C7.58966 -0.526184 4.13776 -0.45993 1.94049 1.55707C-0.581665 3.87222 -0.645325 7.81287 1.75031 10.2102C3.79315 12.2547 6.95502 12.503 9.2771 10.967C9.30811 10.9465 9.37885 10.8841 9.47473 10.7944L13.8181 14.9887C14.192 15.3498 14.7879 15.3394 15.1489 14.9655C15.51 14.5916 15.4996 13.9958 15.1257 13.6347L10.8018 9.45914C10.8997 9.35345 10.9681 9.27545 10.9895 9.24258ZM2.96704 8.99216C1.3045 7.3284 1.3045 4.62128 2.96704 2.95752C4.62952 1.29376 7.33447 1.29334 8.99695 2.95752C10.6594 4.62128 10.6594 7.3284 8.99695 8.99216C7.33447 10.6559 4.62952 10.6559 2.96704 8.99216Z"
        />
         
      </svg>
    </button>
  </div>
   
  <button
    class="rpl-search-form__show-filters"
  >
    <span>
      Refine search
    </span>
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Card Search Results 1`] = `
<div
  class="rpl-search-results"
  pagerchangehandler="function () { [native code] }"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 4 of 10 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter rpl-search-results__main--events"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <!---->
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This event has no image.
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.32601L7.194 0.32601C6.822 -0.0809905 6.191 -0.11099 5.781 0.25901C5.373 0.63101 5.344 1.26301 5.715 1.67201L8.739 4.99901H1C0.447 4.99901 0 5.44601 0 5.99901C0 6.55201 0.447 6.99901 1 6.99901H8.739L5.715 10.326C5.344 10.735 5.373 11.367 5.781 11.739C5.973 11.913 6.215 11.999 6.454 11.999C6.726 11.999 6.997 11.888 7.194 11.672L11.74 6.67201C12.087 6.29001 12.087 5.70801 11.74 5.32601Z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M0.292893 7.70711C-0.0976311 7.31658 -0.0976311 6.68342 0.292893 6.29289L2.58579 4L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L4.70711 3.29289C5.09763 3.68342 5.09763 4.31658 4.70711 4.70711L1.70711 7.70711C1.31658 8.09763 0.683417 8.09763 0.292893 7.70711Z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Grant Search Results 1`] = `
<div
  class="rpl-search-results"
  pagerchangehandler="function () { [native code] }"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 3 of 3 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.31333 8.94971C4.42875 8.78014 3.72365 8.2614 3.5 7.48831L4.90065 7.0557C5.0749 7.58912 5.47747 7.82879 6.01823 7.82879C6.55833 7.82879 6.86944 7.58044 6.86944 7.24864C6.86944 6.99094 6.75061 6.81602 6.33869 6.73324L5.19373 6.47487C4.3699 6.28193 3.64687 5.84865 3.64687 4.79917C3.64687 3.85984 4.3039 3.2216 5.31333 3.04134V2.434C5.31333 2.18783 5.47126 2 5.75719 2C5.85597 2 6.10584 2 6.23953 2C6.48691 2 6.64512 2.18563 6.64667 2.434V3.06538C7.40174 3.25164 7.97434 3.72231 8.19665 4.39392L6.86944 4.74442C6.68651 4.29245 6.28328 4.13623 5.90808 4.13623C5.44142 4.13623 5.13899 4.38525 5.13899 4.71638C5.13899 4.94671 5.2398 5.12162 5.58762 5.20441L6.74126 5.4621C7.72999 5.70178 8.30681 6.22652 8.30681 7.14716C8.30681 8.1399 7.59513 8.7521 6.64512 8.94103V9.5313C6.64512 9.7745 6.5417 10 6.23953 10C6.10378 10 5.88475 10 5.75719 10C5.38733 10 5.31333 9.70044 5.31333 9.5313V8.94971ZM6 0C2.69127 0 0 2.69182 0 6C0 9.30818 2.69127 12 6 12C9.30818 12 12 9.30818 12 6C12 2.69182 9.30818 0 6 0Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0C9.30818 0 12 2.69182 12 6C12 9.30818 9.30818 12 6 12C2.69127 12 0 9.30818 0 6C0 2.69182 2.69127 0 6 0ZM7.2 6H6.97657C6.67943 6.13657 6.34857 6.21429 6 6.21429C5.652 6.21429 5.32229 6.13657 5.024 6H4.8C3.80686 6 3 6.80629 3 7.8V8.35714C3 8.712 3.288 9 3.64286 9H8.35714C8.712 9 9 8.712 9 8.35714V7.8C9 6.80629 8.19371 6 7.2 6ZM6 5.5C6.96717 5.5 7.75 4.71658 7.75 3.75C7.75 2.78342 6.96717 2 6 2C5.03342 2 4.25 2.78342 4.25 3.75C4.25 4.71658 5.03342 5.5 6 5.5Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 0 1 0 .823l-1.916 1.91a.581.581 0 0 1-.823 0L12 14.71l-3.15 3.174a.581.581 0 0 1-.823 0l-1.91-1.916a.581.581 0 0 1 0-.823L9.29 12 6.116 8.85a.581.581 0 0 1 0-.823l1.916-1.916a.581.581 0 0 1 .823 0L12 9.291l3.15-3.175a.581.581 0 0 1 .823 0l1.916 1.916a.581.581 0 0 1 0 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.31333 8.94971C4.42875 8.78014 3.72365 8.2614 3.5 7.48831L4.90065 7.0557C5.0749 7.58912 5.47747 7.82879 6.01823 7.82879C6.55833 7.82879 6.86944 7.58044 6.86944 7.24864C6.86944 6.99094 6.75061 6.81602 6.33869 6.73324L5.19373 6.47487C4.3699 6.28193 3.64687 5.84865 3.64687 4.79917C3.64687 3.85984 4.3039 3.2216 5.31333 3.04134V2.434C5.31333 2.18783 5.47126 2 5.75719 2C5.85597 2 6.10584 2 6.23953 2C6.48691 2 6.64512 2.18563 6.64667 2.434V3.06538C7.40174 3.25164 7.97434 3.72231 8.19665 4.39392L6.86944 4.74442C6.68651 4.29245 6.28328 4.13623 5.90808 4.13623C5.44142 4.13623 5.13899 4.38525 5.13899 4.71638C5.13899 4.94671 5.2398 5.12162 5.58762 5.20441L6.74126 5.4621C7.72999 5.70178 8.30681 6.22652 8.30681 7.14716C8.30681 8.1399 7.59513 8.7521 6.64512 8.94103V9.5313C6.64512 9.7745 6.5417 10 6.23953 10C6.10378 10 5.88475 10 5.75719 10C5.38733 10 5.31333 9.70044 5.31333 9.5313V8.94971ZM6 0C2.69127 0 0 2.69182 0 6C0 9.30818 2.69127 12 6 12C9.30818 12 12 9.30818 12 6C12 2.69182 9.30818 0 6 0Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0C9.30818 0 12 2.69182 12 6C12 9.30818 9.30818 12 6 12C2.69127 12 0 9.30818 0 6C0 2.69182 2.69127 0 6 0ZM7.2 6H6.97657C6.67943 6.13657 6.34857 6.21429 6 6.21429C5.652 6.21429 5.32229 6.13657 5.024 6H4.8C3.80686 6 3 6.80629 3 7.8V8.35714C3 8.712 3.288 9 3.64286 9H8.35714C8.712 9 9 8.712 9 8.35714V7.8C9 6.80629 8.19371 6 7.2 6ZM6 5.5C6.96717 5.5 7.75 4.71658 7.75 3.75C7.75 2.78342 6.96717 2 6 2C5.03342 2 4.25 2.78342 4.25 3.75C4.25 4.71658 5.03342 5.5 6 5.5Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 0 1 0 .823l-1.916 1.91a.581.581 0 0 1-.823 0L12 14.71l-3.15 3.174a.581.581 0 0 1-.823 0l-1.91-1.916a.581.581 0 0 1 0-.823L9.29 12 6.116 8.85a.581.581 0 0 1 0-.823l1.916-1.916a.581.581 0 0 1 .823 0L12 9.291l3.15-3.175a.581.581 0 0 1 .823 0l1.916 1.916a.581.581 0 0 1 0 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.31333 8.94971C4.42875 8.78014 3.72365 8.2614 3.5 7.48831L4.90065 7.0557C5.0749 7.58912 5.47747 7.82879 6.01823 7.82879C6.55833 7.82879 6.86944 7.58044 6.86944 7.24864C6.86944 6.99094 6.75061 6.81602 6.33869 6.73324L5.19373 6.47487C4.3699 6.28193 3.64687 5.84865 3.64687 4.79917C3.64687 3.85984 4.3039 3.2216 5.31333 3.04134V2.434C5.31333 2.18783 5.47126 2 5.75719 2C5.85597 2 6.10584 2 6.23953 2C6.48691 2 6.64512 2.18563 6.64667 2.434V3.06538C7.40174 3.25164 7.97434 3.72231 8.19665 4.39392L6.86944 4.74442C6.68651 4.29245 6.28328 4.13623 5.90808 4.13623C5.44142 4.13623 5.13899 4.38525 5.13899 4.71638C5.13899 4.94671 5.2398 5.12162 5.58762 5.20441L6.74126 5.4621C7.72999 5.70178 8.30681 6.22652 8.30681 7.14716C8.30681 8.1399 7.59513 8.7521 6.64512 8.94103V9.5313C6.64512 9.7745 6.5417 10 6.23953 10C6.10378 10 5.88475 10 5.75719 10C5.38733 10 5.31333 9.70044 5.31333 9.5313V8.94971ZM6 0C2.69127 0 0 2.69182 0 6C0 9.30818 2.69127 12 6 12C9.30818 12 12 9.30818 12 6C12 2.69182 9.30818 0 6 0Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0C9.30818 0 12 2.69182 12 6C12 9.30818 9.30818 12 6 12C2.69127 12 0 9.30818 0 6C0 2.69182 2.69127 0 6 0ZM7.2 6H6.97657C6.67943 6.13657 6.34857 6.21429 6 6.21429C5.652 6.21429 5.32229 6.13657 5.024 6H4.8C3.80686 6 3 6.80629 3 7.8V8.35714C3 8.712 3.288 9 3.64286 9H8.35714C8.712 9 9 8.712 9 8.35714V7.8C9 6.80629 8.19371 6 7.2 6ZM6 5.5C6.96717 5.5 7.75 4.71658 7.75 3.75C7.75 2.78342 6.96717 2 6 2C5.03342 2 4.25 2.78342 4.25 3.75C4.25 4.71658 5.03342 5.5 6 5.5Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 0 1 0 .823l-1.916 1.91a.581.581 0 0 1-.823 0L12 14.71l-3.15 3.174a.581.581 0 0 1-.823 0l-1.91-1.916a.581.581 0 0 1 0-.823L9.29 12 6.116 8.85a.581.581 0 0 1 0-.823l1.916-1.916a.581.581 0 0 1 .823 0L12 9.291l3.15-3.175a.581.581 0 0 1 .823 0l1.916 1.916a.581.581 0 0 1 0 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.31333 8.94971C4.42875 8.78014 3.72365 8.2614 3.5 7.48831L4.90065 7.0557C5.0749 7.58912 5.47747 7.82879 6.01823 7.82879C6.55833 7.82879 6.86944 7.58044 6.86944 7.24864C6.86944 6.99094 6.75061 6.81602 6.33869 6.73324L5.19373 6.47487C4.3699 6.28193 3.64687 5.84865 3.64687 4.79917C3.64687 3.85984 4.3039 3.2216 5.31333 3.04134V2.434C5.31333 2.18783 5.47126 2 5.75719 2C5.85597 2 6.10584 2 6.23953 2C6.48691 2 6.64512 2.18563 6.64667 2.434V3.06538C7.40174 3.25164 7.97434 3.72231 8.19665 4.39392L6.86944 4.74442C6.68651 4.29245 6.28328 4.13623 5.90808 4.13623C5.44142 4.13623 5.13899 4.38525 5.13899 4.71638C5.13899 4.94671 5.2398 5.12162 5.58762 5.20441L6.74126 5.4621C7.72999 5.70178 8.30681 6.22652 8.30681 7.14716C8.30681 8.1399 7.59513 8.7521 6.64512 8.94103V9.5313C6.64512 9.7745 6.5417 10 6.23953 10C6.10378 10 5.88475 10 5.75719 10C5.38733 10 5.31333 9.70044 5.31333 9.5313V8.94971ZM6 0C2.69127 0 0 2.69182 0 6C0 9.30818 2.69127 12 6 12C9.30818 12 12 9.30818 12 6C12 2.69182 9.30818 0 6 0Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0C9.30818 0 12 2.69182 12 6C12 9.30818 9.30818 12 6 12C2.69127 12 0 9.30818 0 6C0 2.69182 2.69127 0 6 0ZM7.2 6H6.97657C6.67943 6.13657 6.34857 6.21429 6 6.21429C5.652 6.21429 5.32229 6.13657 5.024 6H4.8C3.80686 6 3 6.80629 3 7.8V8.35714C3 8.712 3.288 9 3.64286 9H8.35714C8.712 9 9 8.712 9 8.35714V7.8C9 6.80629 8.19371 6 7.2 6ZM6 5.5C6.96717 5.5 7.75 4.71658 7.75 3.75C7.75 2.78342 6.96717 2 6 2C5.03342 2 4.25 2.78342 4.25 3.75C4.25 4.71658 5.03342 5.5 6 5.5Z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 0 1 0 .823l-1.916 1.91a.581.581 0 0 1-.823 0L12 14.71l-3.15 3.174a.581.581 0 0 1-.823 0l-1.91-1.916a.581.581 0 0 1 0-.823L9.29 12 6.116 8.85a.581.581 0 0 1 0-.823l1.916-1.916a.581.581 0 0 1 .823 0L12 9.291l3.15-3.175a.581.581 0 0 1 .823 0l1.916 1.916a.581.581 0 0 1 0 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M0.292893 7.70711C-0.0976311 7.31658 -0.0976311 6.68342 0.292893 6.29289L2.58579 4L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L4.70711 3.29289C5.09763 3.68342 5.09763 4.31658 4.70711 4.70711L1.70711 7.70711C1.31658 8.09763 0.683417 8.09763 0.292893 7.70711Z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Search Result 1`] = `
<div
  class="rpl-search-result"
>
  <a
    class="rpl-link"
    data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
    href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
  >
    <span
      class="rpl-link__inner"
    >
      <h2
        class="rpl-search-result__heading"
      >
        Schools private policy
      </h2>
    </span>
  </a>
   
  <a
    class="rpl-link rpl-search-result__link"
    data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
    href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
  >
    <span
      class="rpl-link__inner"
    >
      www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
    </span>
  </a>
   
  <p
    class="rpl-search-result__date-description"
  >
    <span
      class="rpl-search-result__date"
    >
      Jul 10, 2018
    </span>
     
    <span>
      
    </span>
  </p>
   
  <ul
    class="rpl-search-result__terms"
  >
    <li
      class="rpl-search-result__term"
    >
      <div
        class="rpl-meta-tag rpl-meta-tag--light"
      >
        <a
          class="rpl-link rpl-meta-tag__link"
          data-print-url="#"
          href="#"
        >
          <span
            class="rpl-link__inner"
          >
            <span
              class="rpl-meta-tag__text"
            >
              This is a content tag
            </span>
          </span>
        </a>
      </div>
    </li>
    <li
      class="rpl-search-result__term"
    >
      <div
        class="rpl-meta-tag rpl-meta-tag--light"
      >
        <a
          class="rpl-link rpl-meta-tag__link"
          data-print-url="#"
          href="#"
        >
          <span
            class="rpl-link__inner"
          >
            <span
              class="rpl-meta-tag__text"
            >
              This is a content tag
            </span>
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Search Results 1`] = `
<div
  class="rpl-search-results"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 10 of 70 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-search-result rpl-search-results__item rpl-component-gutter"
      >
        <a
          class="rpl-link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            <h2
              class="rpl-search-result__heading"
            >
              Schools private policy
            </h2>
          </span>
        </a>
         
        <a
          class="rpl-link rpl-search-result__link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
          </span>
        </a>
         
        <p
          class="rpl-search-result__date-description"
        >
          <span
            class="rpl-search-result__date"
          >
            Jul 10, 2018
          </span>
           
          <span>
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
          </span>
        </p>
         
        <ul
          class="rpl-search-result__terms"
        >
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-search-result rpl-search-results__item rpl-component-gutter"
      >
        <a
          class="rpl-link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            <h2
              class="rpl-search-result__heading"
            >
              Schools private policy
            </h2>
          </span>
        </a>
         
        <a
          class="rpl-link rpl-search-result__link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
          </span>
        </a>
         
        <p
          class="rpl-search-result__date-description"
        >
          <span
            class="rpl-search-result__date"
          >
            Jul 10, 2018
          </span>
           
          <span>
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
          </span>
        </p>
         
        <ul
          class="rpl-search-result__terms"
        >
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M0.292893 7.70711C-0.0976311 7.31658 -0.0976311 6.68342 0.292893 6.29289L2.58579 4L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L4.70711 3.29289C5.09763 3.68342 5.09763 4.31658 4.70711 4.70711L1.70711 7.70711C1.31658 8.09763 0.683417 8.09763 0.292893 7.70711Z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;
